@@ -554,16 +554,11 @@ available in \<org.checkerframework.annotatedlib>, then
 % running your code, you can use either the annotated library or the regular
 % distributed version of the library --- they behave identically.
 
-There is one special case.
-\begin{itemize}
-\item
-For the Java 8 version of the Javadoc classes in the JDK's \<com.sun.javadoc> package,
-% are not exposed by ct.sym and therefore cannot be part of an
-% annotated JDK
-use the stub file \<checker/resources/javadoc.astub> by using \<-Astubs=checker.jar/javadoc.astub>.
+There is one special case.  If an \<.astub> file is shipped with the
+Checker Framework in \<checker/resources/>, then you can
+use \<-Astubs=checker.jar/\emph{stubfilename.astub}>.
 The ``\<checker.jar>'' should be literal --- don't provide a path.
 (This special syntax only works for ``\<checker.jar>''.)
-\end{itemize}
 
 
 \subsectionAndLabel{Summary of command-line options}{checker-options}
